Warning fixes: hiding, mutability, compound numeric assignment, newInstance use, comparison precedence and a few others